# neurosymbolic-legal-reasoner

./: .env.example  .gitignore  README.md  analyze_statutes.py  ask_cli.py  audit_script.py  check_extraction.py  check_integrity.py  check_integrity2.py  comprehensive_analysis.py  deep_analysis.py  diagnose_clauses_points.py  docker-compose.yml  domain_audit.py  extract_labor_text.py  final_analysis.py  final_report.py  labor_text.txt  pyproject.toml  re_audit_enterprise.py  repaired_enterprise_audit.py  requirements.txt  test_ask_smoke.py  tmp_enterprise_audit.py  updated_count.py  verdict_enterprise_audit.py
backend/: Dockerfile  README.md  pytest.ini  requirements.txt
configs/: backward_reasoning.yaml  forward_reasoning.yaml  labor_rulebase_pipeline.yaml  law_rulebase_pipeline.yaml  parser.yaml  paths.yaml  retrieval.yaml  rule_builder.yaml  tax_rulebase_pipeline.yaml  verification.yaml
data/: _nguong_sample.csv
docs/: runbook_backend.md  runbook_manual_qa_compose.md  taxonomy_bug.docx
evaluation/: baseline_direct.jsonl  baseline_direct.xlsx  baseline_rag.jsonl  convert_to_jsonl.py  evaluation_analysis.py  experiment.xlsx  output.docx  qa_141.jsonl  qa_290_bhxh_doanhnghiep_thue.xlsx  qa_290_exp_ask_only.json  qa_290_exp_cases_gold_mode.jsonl  qa_290_exp_full_gold_mode.json  qa_290_gold_mode_review.csv  rulebase_datasheet.xlsx  run_290_qa_batch.py  run_baseline.py
frontend/: Dockerfile  package-lock.json  package.json
notebooks/: 01_corpus_inspection.ipynb  02_question_parse_analysis.ipynb  03_rulebase_analysis.ipynb  04_retrieval_analysis.ipynb  (+3 more)
(+818 files in other folders)
